--- a/src/main/resources/templates/views/adm/srv/ADMSRV001M0.html
+++ b/src/main/resources/templates/views/adm/srv/ADMSRV001M0.html
@@ -332,7 +332,7 @@
             $("#basicSubscriptionButton")
               .removeClass("btn btn-success w-100")
               .addClass("btn btn-primary w-100")
-              .text("Really?")
+              .text("Seriously?")
               .attr("onclick","useBasicSubscription()");
               //.prop("disabled", false);
             alert("Your company is currently subscribing to Premium Plan.");
@@ -429,7 +429,7 @@
                 .removeAttr("onclick");
                 //.prop("disabled", true);
               $("#basicSubscriptionButton")
-                .text("Really?")
+                .text("Seriously?")
                 //.prop("disabled", false);
             } else {
               $("#basicSubscriptionButton")
