공통 에러페이지 설정 변경

--- a/src/main/resources/templates/error/error.html
+++ b/src/main/resources/templates/error/error.html
@@ -86,8 +86,8 @@
               <path d="M601.002 350.178C579.177 366.095 549.387 377.694 514.39 381.184C511.347 375.792 508.372 370.361 505.466 364.894C501.376 357.2 497.519 349.634 493.896 342.197C505.942 349.292 519.121 354.256 532.854 356.871C555.749 361.042 579.355 358.723 601.002 350.178Z" fill="black" opacity="0.1"></path>
             </svg></div>
           <p class="empty-title">Unknown Error</p>
-          <p class="empty-subtitle text-secondary">
-            An unknown error occurred while processing the service.
+          <p class="empty-subtitle text-secondary" style="width:700px;">
+            An unknown error occurred while processing the service.<br/>
             Please contact the administrator and we will take action as soon as possible.
           </p>
           <div class="empty-action">
