--- a/src/main/resources/templates/views/user/myPage.html
+++ b/src/main/resources/templates/views/user/myPage.html
@@ -191,7 +191,7 @@
 													3</a>
 											</td>
 											<td>
-												<span class="avatar avatar-sm" style="background-image: url(./static/avatars/000m.jpg)"></span>
+												<span class="avatar avatar-sm"></span>
 											</td>
 										</tr>
 										<tr>
@@ -220,7 +220,7 @@
 													5</a>
 											</td>
 											<td>
-												<span class="avatar avatar-sm" style="background-image: url(./static/avatars/000f.jpg)"></span>
+												<span class="avatar avatar-sm"></span>
 											</td>
 										</tr>
 										<tr>
@@ -249,7 +249,7 @@
 													3</a>
 											</td>
 											<td>
-												<span class="avatar avatar-sm" style="background-image: url(./static/avatars/001f.jpg)"></span>
+												<span class="avatar avatar-sm"></span>
 											</td>
 										</tr>
 									</table>
