파일관리 화면 수정

--- a/src/main/resources/static/css/common-css.css
+++ b/src/main/resources/static/css/common-css.css
@@ -25,6 +25,10 @@ a.nav-link.active {
   text-align: center;
 }
 
+.slick-column-left {
+  text-align: left;
+}
+
 .slick-column-center {
   text-align: center;
 }
