--- a/src/main/resources/templates/views/wrk/fil/WRKFIL004M0.html
+++ b/src/main/resources/templates/views/wrk/fil/WRKFIL004M0.html
@@ -85,7 +85,7 @@
                     autocomplete="off"
                   />
                 </div>
-                <div class="col"> 
+                <div class="col text-end"> 
                   <button
                     name="btnSearch" 
                     type="button" 
