--- a/src/main/resources/static/css/common-css.css
+++ b/src/main/resources/static/css/common-css.css
@@ -21,19 +21,27 @@ a.nav-link.active {
 .slick-header-columns {
   /* flex-grow: 1 if we want to align sort icons to the right */
   --alpine-header-name-flex-grow: 1;
+  font-family: "Inter Var", -apple-system, BlinkMacSystemFont, San Francisco, Segoe UI, Roboto, Helvetica Neue, sans-serif;
+  font-size: 13px;
   font-weight: bold;
   text-align: center;
 }
 
 .slick-column-left {
+  font-family: "Inter Var", -apple-system, BlinkMacSystemFont, San Francisco, Segoe UI, Roboto, Helvetica Neue, sans-serif;
+  font-size: 13px;
   text-align: left;
 }
 
 .slick-column-center {
+  font-family: "Inter Var", -apple-system, BlinkMacSystemFont, San Francisco, Segoe UI, Roboto, Helvetica Neue, sans-serif;
+  font-size: 13px;
   text-align: center;
 }
 
 .slick-column-right {
+  font-family: "Inter Var", -apple-system, BlinkMacSystemFont, San Francisco, Segoe UI, Roboto, Helvetica Neue, sans-serif;
+  font-size: 13px;
   text-align: right;
 }
 
