메뉴관리 화면 : 모달창에 삭제버튼 추가

--- a/src/main/resources/templates/views/opn/usr/OPNUSR001M0.html
+++ b/src/main/resources/templates/views/opn/usr/OPNUSR001M0.html
@@ -150,7 +150,7 @@
 			gf_Transaction(option, fn_callback);
 		}
 
-		function deleteList(todeleteRow) {
+		function deleteList(input) {
 			console.log("deleteList input : " + input);
 			var option = {
 				id: "deleteList"
